Add Redis storage support for Coolify deployment
 Features:
- Add Redis storage support alongside file system storage
- Automatic storage selection based on REDIS_URL environment variable
- Complete Redis KV implementation with same interface as FileKV
- Add redis@^4.6.0 dependency

 Coolify Deployment:
- Add docker-compose.coolify.yml for Coolify deployment
- Include Redis service with data persistence
- Optimized Redis configuration (256MB memory limit, LRU policy)
- Health checks for both app and Redis services

 Documentation:
- Add comprehensive Coolify deployment guide
- Update README.md with Redis storage information
- Add deployment options comparison
- Include Redis configuration examples

 Configuration:
- Update .env.example with Redis configuration options
- Add REDIS_URL and REDIS_PREFIX environment variables
- Update Docker Compose with Redis service profile
- Maintain backward compatibility with file storage

 Docker Improvements:
- Add Redis service to docker-compose.yml
- Configure Redis data persistence volume
- Network isolation for Redis communication
- Production-ready Redis settings

This update makes the application perfect for containerized deployment
platforms like Coolify while maintaining full compatibility with
existing file-based deployments.

--- a/.env.example
+++ b/.env.example
@@ -31,8 +31,14 @@ URL=
 # WARP 配置 (可选)
 WARP=
 
-# KV存储配置
+# 存储配置
 KV=true
 
-# 数据存储路径
+# 文件系统存储配置（默认）
 DATA_DIR=./data
+
+# Redis存储配置（可选，配置后将使用Redis替代文件系统）
+# REDIS_URL=redis://localhost:6379
+# REDIS_URL=redis://username:password@localhost:6379
+# REDIS_URL=redis://localhost:6379/0
+# REDIS_PREFIX=cf-workers-sub:
