--- a/docker-compose.coolify.yml
+++ b/docker-compose.coolify.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 
 services:
-  cf-workers-sub:
+  app:
     build: .
     container_name: cf-workers-sub
     restart: unless-stopped
@@ -11,79 +11,62 @@ services:
       - NODE_ENV=production
       - PORT=3000
       - HOST=0.0.0.0
-      # 从 .env 文件读取环境变量
+      # 基础配置
       - TOKEN=${TOKEN:-auto}
       - GUESTTOKEN=${GUESTTOKEN:-}
       - FILENAME=${FILENAME:-CF-Workers-SUB}
       - SUBUPTIME=${SUBUPTIME:-6}
+      # Telegram通知
       - TGTOKEN=${TGTOKEN:-}
       - TGID=${TGID:-}
       - TG=${TG:-0}
+      # 订阅转换配置
       - SUBAPI=${SUBAPI:-https://sub.nasl.cc:8888}
       - SUBCONFIG=${SUBCONFIG:-https://raw.githubusercontent.com/Frankieli123/clash2/refs/heads/main/Clash-LIAN.ini}
+      # 订阅源配置
       - LINK=${LINK:-}
       - LINKSUB=${LINKSUB:-}
+      # 其他配置
       - URL302=${URL302:-}
       - URL=${URL:-}
       - WARP=${WARP:-}
       - KV=${KV:-true}
-      - DATA_DIR=${DATA_DIR:-./data}
-      - EXTERNAL_URL=${EXTERNAL_URL:-}
-      # Redis配置（可选）
-      - REDIS_URL=${REDIS_URL:-}
+      # 存储配置 - 使用Redis
+      - REDIS_URL=redis://redis:6379
       - REDIS_PREFIX=${REDIS_PREFIX:-cf-workers-sub:}
+      # 外部访问地址（Coolify会自动设置）
+      - EXTERNAL_URL=${EXTERNAL_URL:-}
     volumes:
-      - ./data:/app/data
       - ./logs:/app/logs
-    env_file:
-      - .env
+    depends_on:
+      - redis
+    networks:
+      - cf-workers-sub-network
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:3000/"]
       interval: 30s
       timeout: 10s
       retries: 3
       start_period: 40s
-    networks:
-      - cf-workers-sub-network
 
-  # 可选：Nginx 反向代理
-  nginx:
-    image: nginx:alpine
-    container_name: cf-workers-sub-nginx
-    restart: unless-stopped
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./ssl:/etc/nginx/ssl:ro
-    depends_on:
-      - cf-workers-sub
-    networks:
-      - cf-workers-sub-network
-    profiles:
-      - nginx
-
-  # Redis服务（可选）
   redis:
     image: redis:7-alpine
     container_name: cf-workers-sub-redis
     restart: unless-stopped
-    ports:
-      - "6379:6379"
     volumes:
       - redis-data:/data
-    command: redis-server --appendonly yes
+    command: redis-server --appendonly yes --maxmemory 256mb --maxmemory-policy allkeys-lru
     networks:
       - cf-workers-sub-network
-    profiles:
-      - redis
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
 networks:
   cf-workers-sub-network:
     driver: bridge
 
 volumes:
-  data:
-  logs:
   redis-data:
